<resources>
    <string name="app_name">Scouter</string>
    <string name="viewInfo">Info</string>
    <string name="mech_hatch">Hatch Mechanism</string>
    <string name="mech_cargo">Cargo Mechanism</string>
    <string name="mech_lift">Lift Mechanism</string>
    <string name="editTeam">Team Name</string>
    <string name="viewStart">Start Game</string>
    <string name="viewTeleop">Teleop</string>
    <string name="gamePreCargo">Pre Game Cargo</string>
    <string name="gamePreHatch">Pre-Game Hatch</string>
    <string name="gamePostHatch">Hatch in Game</string>
    <string name="gamePostCargo">Cargo in Game</string>
    <string name="viewClimb">Climb</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="open_csv">Open data file</string>
    <string name="csv_library">Opencsv Library</string>
    <string name="libs">Open Source</string>
    <string name="intro">Replay Intro</string>
    <string name="view">View Data</string>
    <string name="export">Export</string>
    <string name="clearFile">Erase</string>
    <string name="viewNotes">Notes</string>
    <string name="editNotes">Type your notes here</string>
    <string name="share">Email Data</string>
    <string name="git">Github</string>
    <string name="email">Email Developer</string>
    <string name="climb_hint">How did the climb go?</string>
    <string name="start_hint">How did the robot work in the first 15 seconds</string>
    <string name="description__intro">A simple scouting app that saves scouting data to a csv file.</string>
    <string name="title_permission_write">Access Storage</string>
    <string name="description__permission_write">We need to access your storage to create and read the file that contains the scouting data.</string>
    <string name="emptyTeam">You forgot to enter a team name</string>
    <string name="emptyHatchMech">You forgot to enter a Hatch Grab Mechanism</string>
    <string name="emptyCargoMech">You forgot to enter a Cargo Grab Mechanism</string>
    <string name="emptyLiftMech">You forgot to enter a Lift Mechanism</string>
 <string-array name="climb_options">
        <item>Did not answer</item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>
    <string-array name="start_options">
        <item>Did not answer</item>
        <item>Blind</item>
        <item>Camera</item>
        <item>Autonomous</item>
    </string-array>
    <string-array name="headers">
        <item>Team Name</item>
        <item>Start Game Control</item>
        <item>Hatch Mechanism</item>
        <item>Cargo Mechanism</item>
        <item>Lift Mechanism</item>
        <item>Hatch placed Pre-Game</item>
        <item>Cargo placed Pre-Game</item>
        <item>Hatch placed during the Game</item>
        <item>Cargo placed during the Game</item>
        <item>Climb</item>
        <item>Notes</item>
    </string-array>

</resources>
